gcc/testsuite/gfortran.dg/pr95882_4.f90
! { dg-do compile }

program p
   character(((0)/0)) :: c  ! { dg-error "Division by zero" }
   common /x/ c
end

